--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ setupGoogleAppCreds: &setupGoogleAppCreds
       gcloud auth activate-service-account --key-file /tmp/gcp.json
       gcloud auth list
 
-restoreGoCache: &restoreGoCache
+restoreGoBuildCache: &restoreGoBuildCache
   restore_cache:
     name: Restoring Go build cache
     keys:
@@ -27,19 +27,26 @@ restoreGoCache: &restoreGoCache
       - go-cache-v1-{{ .Environment.CIRCLE_JOB }}-
       - go-cache-v1-
 
-saveGoCache: &saveGoCache
+saveGoBuildCache: &saveGoBuildCache
   save_cache:
     name: Saving Go build cache
     key: go-cache-v1-{{ .Environment.CIRCLE_JOB }}-{{ .Branch }}-{{ .Revision }}
     paths:
       - /home/circleci/.cache/go-build
 
-depCacheKey: &depCacheKey 'v1-rox-go-pkg-dep-{{ checksum "Gopkg.lock" }}'
-restoreDep: &restoreDep
+goModCacheKey: &goModCacheKey 'rox-go-pkg-mod-v2-{{ checksum "go.sum" }}'
+restoreGoModCache: &restoreGoModCache
   restore_cache:
+    name: Restore Go module cache
     keys:
-      - *depCacheKey
-      - v1-rox-go-pkg-dep
+      - *goModCacheKey
+
+saveGoModCache: &saveGoModCache
+  save_cache:
+    name: Saving Go module cache
+    key: *goModCacheKey
+    paths:
+      - /go/pkg/mod
 
 gradleCacheKey: &gradleCacheKey 'v1-rox-gradle-{{ checksum "qa-tests-backend/build.gradle" }}'
 restoreGradle: &restoreGradle
@@ -509,7 +516,7 @@ commands:
         type: string
 
     steps:
-      - *restoreDep
+      - *restoreGoModCache
       - run:
           name: Run `make vet`
           command: make vet-active-tags
@@ -637,18 +644,15 @@ jobs:
     resource_class: large
     steps:
       - checkout
-      - *restoreDep
-      - *restoreGoCache
+      - *restoreGoModCache
+      - *restoreGoBuildCache
       - run:
           name: Build the CLI
           command: make cli
 
-      - save_cache:
-          key: *depCacheKey
-          paths:
-            - /go/pkg/dep
+      - *saveGoModCache
 
-      - *saveGoCache
+      - *saveGoBuildCache
 
       - persist_to_workspace:
           root: /go/src/github.com/stackrox/rox
@@ -664,14 +668,14 @@ jobs:
     resource_class: large
     steps:
       - checkout
-      - *restoreDep
-      - *restoreGoCache
+      - *restoreGoModCache
+      - *restoreGoBuildCache
 
       - run:
           name: Build the main Go binaries
           command: make main-build
 
-      - *saveGoCache
+      - *saveGoBuildCache
 
       - run:
           name: Generate the swagger docs
@@ -688,7 +692,6 @@ jobs:
             - image/keys
             - deps # Used to speed up k8s-tests
             - generated # Used to speed up k8s-tests
-            - vendor # Used to speed up k8s-tests, and for OSS license auditing downstream.
 
       - cleanup-clusters-on-fail
 
@@ -711,14 +714,15 @@ jobs:
             wget --quiet https://github.com/gruntwork-io/fetch/releases/download/v0.3.5/fetch_linux_amd64
             sudo install fetch_linux_amd64 /usr/bin/fetch
             export GITHUB_OAUTH_TOKEN="$GITHUB_TOKEN"
-            fetch --repo="https://github.com/stackrox/ossls" --tag="0.5.0" --release-asset="ossls_linux_amd64" .
+            fetch --repo="https://github.com/stackrox/ossls" --tag="0.6.0" --release-asset="ossls_linux_amd64" .
             sudo install ossls_linux_amd64 /usr/bin/ossls
             ossls version
+
+      - *restoreGoModCache
 
       - run:
           name: Generate OSS notice
           command: |
-            ls vendor
             ls ui/node_modules
             make ossls-notice
 
@@ -732,10 +736,7 @@ jobs:
             docker login -u "$DOCKER_IO_PUSH_USERNAME" -p "$DOCKER_IO_PUSH_PASSWORD" docker.io
             docker push "docker.io/stackrox/main:$(make tag)" | cat
 
-      - save_cache:
-          key: *depCacheKey
-          paths:
-            - /go/pkg/dep
+      - *saveGoModCache
 
       - store_artifacts:
           path: bin/linux/roxctl
@@ -805,14 +806,15 @@ jobs:
             wget --quiet https://github.com/gruntwork-io/fetch/releases/download/v0.3.5/fetch_linux_amd64
             sudo install fetch_linux_amd64 /usr/bin/fetch
             export GITHUB_OAUTH_TOKEN="$GITHUB_TOKEN"
-            fetch --repo="https://github.com/stackrox/ossls" --tag="0.5.0" --release-asset="ossls_linux_amd64" .
+            fetch --repo="https://github.com/stackrox/ossls" --tag="0.6.0" --release-asset="ossls_linux_amd64" .
             sudo install ossls_linux_amd64 /usr/bin/ossls
             ossls version
+
+      - *restoreGoModCache
 
       - run:
           name: Generate OSS notice
           command: |
-            ls vendor
             ls ui/node_modules
             make ossls-notice
 
@@ -862,14 +864,14 @@ jobs:
 
       - *refreshAlpineBaseImage
 
-      - *restoreDep
-      - *restoreGoCache
+      - *restoreGoModCache
+      - *restoreGoBuildCache
 
       - run:
           name: Build images
           command: make scale-image mock-grpc-server-image monitoring-image
 
-      - *saveGoCache
+      - *saveGoBuildCache
 
       - run:
           name: Push new Docker image
@@ -892,17 +894,17 @@ jobs:
     steps:
       - checkout
 
-      - *restoreDep
+      - *restoreGoModCache
       - *restoreGradle
       - *restoreUI
 
-      - *restoreGoCache
+      - *restoreGoBuildCache
 
       - run:
           name: Run Go unit tests
           command: make go-unit-tests
 
-      - *saveGoCache
+      - *saveGoBuildCache
 
       - run:
           name: Generate JUnit reports
@@ -931,7 +933,7 @@ jobs:
     steps:
       - checkout
 
-      - *restoreDep
+      - *restoreGoModCache
       - *restoreGradle
       - *restoreUI
 
@@ -949,7 +951,7 @@ jobs:
     steps:
       - checkout
 
-      - *restoreDep
+      - *restoreGoModCache
       - run:
           name: Ensure that generated files are up to date. (If this fails, run `make go-generated-srcs` and commit the result.)
           command: |
@@ -975,9 +977,9 @@ jobs:
     steps:
       - checkout
 
-      - *restoreDep
+      - *restoreGoModCache
 
-      - *restoreGoCache
+      - *restoreGoBuildCache
 
       - run:
           name: Run integration tests
@@ -997,7 +999,7 @@ jobs:
               exit 1
             fi
 
-      - *saveGoCache
+      - *saveGoBuildCache
 
   k8s-tests:
     <<: *defaults
@@ -1020,6 +1022,11 @@ jobs:
 
       - attach_workspace:
           at: /go/src/github.com/stackrox/rox
+
+      - *restoreGoModCache
+      - run:
+          name: Retrieving missing dependencies
+          command: make download-deps
 
       - *setupRoxctl
       - setup_remote_docker
