Make liveness probes for ScannerV2 probes more forgiving (stackrox/rox#3022)
* This should ensure Kube doesn't kill all our containers every time we start.

--- a/image/templates/kubernetes/helm/scannerv2chart/templates/db_deployment.yaml
+++ b/image/templates/kubernetes/helm/scannerv2chart/templates/db_deployment.yaml
@@ -47,9 +47,10 @@ spec:
             - sh
             - -c
             - exec pg_isready --host $POD_IP
-          initialDelaySeconds: 60
+          initialDelaySeconds: 360
           timeoutSeconds: 5
           failureThreshold: 6
+          periodSeconds: 5
         readinessProbe:
           exec:
             command:
