Fix copy pasta error that prevented `qa-tests-kernel-module` from running (stackrox/rox#3035)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1284,7 +1284,7 @@ jobs:
 
     steps:
       - run-qa-tests:
-          cluster-id: qa-tests
+          cluster-id: qa-tests-kernel-module
           determine-whether-to-run:
             - *check-qa-tests-kernel-module-label
 
