--- a/image/templates/kubernetes/helm/scannerv2chart/templates/db_svc.yaml
+++ b/image/templates/kubernetes/helm/scannerv2chart/templates/db_svc.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   type: {{ .Values.postgresql.service.type }}
   ports:
-  - name: postgresql
+  - name: http-postgresql
     port: {{ .Values.postgresql.service.port }}
     targetPort: postgresql
   selector:
