ScannerV2: set db image pull policy to always (stackrox/rox#3041)

--- a/image/templates/kubernetes/helm/scannerv2chart/templates/db_deployment.yaml
+++ b/image/templates/kubernetes/helm/scannerv2chart/templates/db_deployment.yaml
@@ -22,7 +22,7 @@ spec:
       containers:
       - name: {{ .Values.dbAppName }}
         image: {{ .Values.dbImage | quote }}
-        imagePullPolicy: {{ .Values.imagePullPolicy | quote }}
+        imagePullPolicy: {{ .Values.dbImagePullPolicy | quote }}
         env:
         - name: POSTGRES_USER
           value: {{ .Values.postgresql.postgresUser | quote }}
