--- a/image/templates/kubernetes/helm/scannerv2chart/values.yaml
+++ b/image/templates/kubernetes/helm/scannerv2chart/values.yaml
@@ -8,6 +8,7 @@ scratchVolumeMountPath: /analysis_scratch
 
 dbAppName: scanner-v2-db
 dbImage: {{.K8sConfig.ScannerV2DBImage}}
+dbImagePullPolicy: Always
 
 ## END STACKROX
 
