Security constraint context for scanner-v2 (stackrox/rox#3031)

--- a/image/templates/kubernetes/helm/scannerv2chart/values.yaml
+++ b/image/templates/kubernetes/helm/scannerv2chart/values.yaml
@@ -10,6 +10,8 @@ dbAppName: scanner-v2-db
 dbImage: {{.K8sConfig.ScannerV2DBImage}}
 dbImagePullPolicy: Always
 
+clusterType: {{.ClusterType.String}}
+
 ## END STACKROX
 
 # Anchore engine has a dependency on Postgresql, configure here
