Add resource requests and limits to Scanner V2 (stackrox/rox#3029)

--- a/image/templates/kubernetes/helm/scannerv2chart/templates/db_deployment.yaml
+++ b/image/templates/kubernetes/helm/scannerv2chart/templates/db_deployment.yaml
@@ -23,6 +23,13 @@ spec:
       - name: {{ .Values.dbAppName }}
         image: {{ .Values.dbImage | quote }}
         imagePullPolicy: {{ .Values.dbImagePullPolicy | quote }}
+        resources:
+          requests:
+            memory: "2Gi"
+            cpu: "500m"
+          limits:
+            memory: "4Gi"
+            cpu: "2000m"
         env:
         - name: POSTGRES_USER
           value: {{ .Values.postgresql.postgresUser | quote }}
