Migrate write heavy objects to Badger (stackrox/rox#2587)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1108,6 +1108,7 @@ jobs:
       - ROX_PLAINTEXT_EXPOSURE: true
       - ROX_PLAINTEXT_ENDPOINTS: "http@8080,grpc@8081"
       - ROX_CONFIG_MGMT_UI: true
+      - ROX_BADGER_DB: true
 
     steps:
       - checkout
@@ -1246,6 +1247,7 @@ jobs:
       - INFLUXDB_URL: "http://monitoring-1.us-central1-c.c.stackrox-ci.internal:8086"
       - LOAD_BALANCER: lb
       - ADMISSION_CONTROLLER: true
+      - ROX_BADGER_DB: true
 
     steps:
       - run-qa-tests:
