--- a/ui/src/.eslintrc
+++ b/ui/src/.eslintrc
@@ -13,7 +13,7 @@
             }
         }
     },
-    "rules": {        
+    "rules": {
         // https://github.com/yannickcr/eslint-plugin-react/blob/master/docs/rules/jsx-filename-extension.md
         // allow JSX in .js files
         "react/jsx-filename-extension": ["error", { "extensions": [".js"] }],
@@ -25,13 +25,18 @@
             "allowArrowFunctions": false,  // Airbnb code style doesn't support ES7 property initializers
             "allowBind": false
         }],
-  
+
         // Reconfigure for using react-router Link
         "jsx-a11y/anchor-is-valid": [ "error", {
             "components": [ "Link" ],
             "specialLink": [ "to", "hrefLeft", "hrefRight" ],
             "aspects": [ "noHref", "invalidHref", "preferButton" ]
         }],
+
+        "jsx-a11y/label-has-associated-control": [ "error", {
+            "assert": "either",
+            "depth": 12
+          }],
 
         // disallow use of console in favor of raven-js for error capturing
         "no-console": "error",
@@ -45,7 +50,7 @@
 
         // stepping away from Airbnb and into more inconsistent world to avoid huge refactoring
         "react/destructuring-assignment": ["off"],
-        
+
         // TODO-ivan: rules below are to be removed after fixing all violations in the code
         "react/no-array-index-key": "warn"
     },
