--- a/scale/image/Dockerfile
+++ b/scale/image/Dockerfile
@@ -1,11 +1,18 @@
-FROM alpine:3.9
+FROM ubuntu:16.04
 
 COPY ./image/bin/mocksensor /mocksensor
 COPY ./image/bin/mockcollector /mockcollector
 
+COPY ./image/bin/flightreplay /flightreplay
+COPY ./image/docker-entrypoint.sh /docker-entrypoint.sh
+
 # Profiler
-RUN apk update && apk add --no-cache curl
+RUN apt-get update && apt-get -y install wget curl python2.7-minimal libpython-stdlib
 
 COPY ./image/bin/profiler /profiler
 COPY ./profiler/pprof.sh /pprof.sh
 COPY ./profiler/entrypoint.sh /profiler-entrypoint.sh
+
+RUN curl -O https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-258.0.0-linux-x86_64.tar.gz && \
+    tar zxvf google-cloud-sdk-258.0.0-linux-x86_64.tar.gz google-cloud-sdk && \
+    ./google-cloud-sdk/install.sh
